deploy/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docuvate
spec:
  ingressClassName: traefik
  rules:
    - host: docuvate.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docuvate-web
                port:
                  name: http
